Build submission file

--- a/percolation/build.gradle
+++ b/percolation/build.gradle
@@ -25,3 +25,12 @@ findbugs {
     includeFilter = file("$rootProject.projectDir/../findbugs-coursera.xml")
 }
 
+task submission(type: Zip) {
+    def username = System.properties['user.name'].replaceAll(" ", "").toLowerCase()
+    archiveName = username + '_' + rootProject.name + '_submission.zip'
+    from 'src/main/java'
+    include '*.java'
+		destinationDir(projectDir)
+}
+
+build.finalizedBy(submission)
