--- a/percolation/build.gradle
+++ b/percolation/build.gradle
@@ -1,29 +1,4 @@
-apply plugin: 'java-library'
-apply plugin: 'eclipse'
-apply plugin: 'checkstyle'
-apply plugin: 'findbugs'
-
-repositories {
-    jcenter()
-    mavenCentral()
-}
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-}
-
-checkstyle {
-    toolVersion = '6.19'
-    reportsDir = file("$project.buildDir/reports")
-    configFile = file("$rootProject.projectDir/../checkstyle-coursera.xml")
-}
-
-findbugs {
-    reportsDir = file("$project.buildDir/reports")
-    effort = "max"
-    reportLevel = "high"
-    includeFilter = file("$rootProject.projectDir/../findbugs-coursera.xml")
-}
+apply from: '../common.gradle'
 
 task submission(type: Zip) {
     def username = System.properties['user.name'].replaceAll(" ", "").toLowerCase()
