--- a/common.gradle
+++ b/common.gradle
@@ -9,7 +9,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: "$rootProject.projectDir/../libs", include: ['*.jar'])
+    compile fileTree(dir: "$rootProject.projectDir/..", include: ['*.jar'])
 }
 
 checkstyle {
