--- a/common.gradle
+++ b/common.gradle
@@ -24,3 +24,13 @@ findbugs {
     reportLevel = "high"
     includeFilter = file("$rootProject.projectDir/../findbugs-coursera.xml")
 }
+
+task submission(type: Zip) {
+    def username = System.properties['user.name'].replaceAll(" ", "").toLowerCase()
+    archiveName = username + '_' + rootProject.name + '_submission.zip'
+    from 'src/main/java'
+    include '*.java'
+		destinationDir(projectDir)
+}
+
+build.finalizedBy(submission)
